--- a/templates/App_Shop/home.html
+++ b/templates/App_Shop/home.html
@@ -6,7 +6,7 @@
   <div class="row">
     {% for product in object_list %}
     <div class="col-md-6 col-sm-12 col-lg-3">
-      <figure class="card card-product">
+      <figure class="card-product">
         <div class="img-wrap">
           <img src="/media/{{product.mainimage}}" style="width:100%; height:300px;">
         </div>
